confluence/istio/back/istio-gateway-tls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: confluence-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "shileizcc.com"
    - "www.shileizcc.com"
    - "mirror.shileizcc.com"
    - "wiki.shileizcc.com"
    - "status.shileizcc.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "shileizcc.com"
    - "www.shileizcc.com"
    - "mirror.shileizcc.com"
    - "wiki.shileizcc.com"
    - "status.shileizcc.com"
    tls:
      mode: SIMPLE
      serverCertificate: "/etc/istio/ingressgateway-certs/tls.crt"
      privateKey: "/etc/istio/ingressgateway-certs/tls.key"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: confluence-virtualservice
spec:
  hosts:
  - "shileizcc.com"
  - "www.shileizcc.com"
  - "mirror.shileizcc.com"
  - "wiki.shileizcc.com"
  - "status.shileizcc.com"
  gateways:
  - istio-system/confluence-gateway
  http:
  - route:
    - destination:
        host: confluence
        port:
          number: 8090
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: confluence-destinationrule
spec:
  host: confluence
  subsets:
  - name: v1
    labels:
      version: v1
